[package]
name = "key2joy_rebinder"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3.9", features = [
    "consoleapi",
    "libloaderapi",
    "winuser",
] }
eframe = "0.33.3"
tray-icon = "0.21.2"
egui-winit = "0.33.3"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
